src/ui/Style.css
hr {
    height: 0.5em;
    border: none;
}

body {
    font-family: 'Iosevka Aile Custom Web', system-ui, sans-serif;
    font-size: 16px;
    line-height: 1.5;
    --line-height: 1.5em;

    background: var(--color-bg);
    color: var(--color-fg);
    accent-color: var(--color-fg-hl); /* eslint-disable-line css/use-baseline */
}

p, ul {
    margin-top: 1em;
    margin-bottom: 1em;
}

ul {
    padding-left: 2.5em;
}

li {
    contain: none;
}

.dim {
    color: var(--color-fg-dim);
    --color-fg: var(--color-fg-dim);
    --color-fg-hl: var(--color-fg-hl-dim);
    --color-fg-pitch: var(--color-fg-dim);
    --color-fg-volume: var(--color-fg-dim);
    --color-fg-panning: var(--color-fg-dim);
    --color-fg-timing: var(--color-fg-dim);
    --color-fg-control: var(--color-fg-dim);
    --color-bg-pitch: var(--color-bg-btn);
    --color-bg-volume: var(--color-bg-btn);
    --color-bg-panning: var(--color-bg-btn);
    --color-bg-timing: var(--color-bg-btn);
    --color-bg-control: var(--color-bg-btn);
}

input {
    padding: 1px 3px;
    background: var(--color-bg);
    border: 1px solid currentColor;
    border-radius: 3px;
}

input[type="range"] {
    padding: 0;
    border: none;
}

.small-input {
    width: 4em;
}
.med-input {
    width: 6em;
}

meter {
    /* https://css-tricks.com/html5-meter-element/ */
    width: 100%;
    -webkit-appearance: none;
    appearance: none;
    margin: 0.25em 0;
    height: 0.5em;
}
meter::-webkit-meter-bar {
    background: var(--color-bg-btn);
    border: 1px solid var(--color-fg-dim);
    border-radius: 4px;
    height: 0.5em;
}
meter::-webkit-meter-optimum-value {
    background: var(--color-fg-hl);
}
meter::-webkit-meter-suboptimum-value {
    background: var(--color-fg-warn);
}
meter::-webkit-meter-even-less-good-value {
    background: var(--color-fg-error);
}
@supports selector(::-moz-meter-bar) {
    meter {
        background: var(--color-bg-btn);
        border: 1px solid var(--color-fg-dim);
        border-radius: 4px;
    }
    :-moz-meter-optimum::-moz-meter-bar {
        background: var(--color-fg-hl);
    }
    :-moz-meter-sub-optimum::-moz-meter-bar {
        background: var(--color-fg-warn);
    }
    :-moz-meter-sub-sub-optimum::-moz-meter-bar {
        background: var(--color-fg-error);
    }
}

textarea {
    white-space: pre;
}

pre,
code,
textarea,
table,
.pattern-cell {
    font-family: 'Iosevka Fixed Custom Web', monospace;
}

label,
output {
    padding: 0 0.33em;
}

.label-button {
    white-space: nowrap;
    padding: 0; /* override label */
    position: relative;
    contain: none;
}
.label-button input {
    -webkit-appearance: none;
    appearance: none;
    padding: 0;
    border: none;

    position: absolute;
    top: 0;
    left: 0;
    margin: 0;

    width: 0;
    height: 0;
    min-width: 100%;
    min-height: 100%;
}

.tap-height,
button,
select,
.label-button span {
    min-height: 2.5em;
}

button,
select,
.label-button,
.tab-group {
    margin: 2px;
}

.tap-height {
    margin-top: 2px;
    margin-bottom: 2px;
    width: 0;
}

button,
select,
.label-button span {
    min-width: 2.5em;
    padding: 0 0.4em;

    display: inline-flex;
    justify-content: center;
    align-items: center;
    white-space: nowrap;
    background: var(--color-bg-btn);
    border: 1px solid var(--color-fg);
    border-radius: 5px;
    touch-action: manipulation;
}

.tab-group label {
    margin: 0;
}

.tab-group label:not(:first-of-type) span {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.tab-group label:not(:last-of-type) span {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-right-width: 0;
}

.label-button span {
    flex: 1 0 0;
}

button:active,
button.active,
select:active,
select.active,
.label-button :active + span,
.label-button.active span,
button:disabled,
select:disabled,
.label-button :disabled + span,
input:disabled {
    background: var(--color-bg-btn-press);
}

.label-button :checked + span,
.show-checked {
    background: var(--color-fg-hl);
    color: var(--color-bg);
}

.label-button :active:checked + span,
.label-button.active :checked + span,
.show-checked.active {
    background: var(--color-bg-hl);
    color: var(--color-fg);
}

.icon svg {
    width: var(--line-height);
    height: var(--line-height);
    fill: currentColor;
    vertical-align: top;
}

label {
    display: inline-flex;
    align-items: center;
}

dialog {
    display: flex;
    flex-direction: column;

    /* center dialog */
    margin: 0 auto; /* margin:auto doesn't work in old Chrome versions */
    position: absolute;
    top: 50%;
    transform: translateY(-50%);

    background: var(--color-bg);
    color: var(--color-fg);
    box-sizing: content-box;
    padding: 1em;
    border: 1px solid var(--color-fg);
    border-radius: 12px;
    box-shadow: black 0 0 40px;
}

::backdrop {
    background: rgba(0, 0, 0, 0.2);
}

.message-dialog {
    max-width: 24em;
}
.message-out {
    white-space: pre-wrap;
    -webkit-user-select: text;
    user-select: text; /* eslint-disable-line css/use-baseline */
}

.properties-grid {
    display: grid;
    grid-template-columns: auto minmax(0, 1fr);
    align-items: center;
}

.placeholder {
    margin: 16px;
    background: var(--color-bg-btn-press);
    align-items: center;
    justify-content: center;
}

.warning {
    color: var(--color-fg-error);
    -webkit-user-select: text;
    user-select: text; /* eslint-disable-line css/use-baseline */
}

table {
    border-collapse: collapse;
}

div[role="tooltip"] {
    position: fixed;
    transform: translate(-50%, -100%);
	width: max-content;
    z-index: 10;
    visibility: visible;

    background: var(--color-bg);
    padding: 0 4px;
    border: 1px solid var(--color-fg-dim);
    border-radius: 6px;
    opacity: 1;
}
div[role="tooltip"].tooltip-bottom {
    transform: translate(-50%, 0);
}
div[role="tooltip"].tooltip-hide {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s 0.2s, opacity 0.2s linear;
}

